--- a/7.7/package.json
+++ b/7.7/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Modul_7",
+  "name": "module_7-7.7",
   "version": "1.0.0",
-  "description": "",
+  "description": "Zadanie 7.7",
   "main": "index.js",
   "scripts": {
     "test": "npm-run-all test:*",
@@ -11,30 +11,27 @@
     "init:files": "touch README.md index.html sass/style.scss js/script.js",
     "init:gitignore": "curl https://raw.githubusercontent.com/github/gitignore/master/Node.gitignore -o .gitignore",
     "build": "npm-run-all build:* test",
-    
     "build:clean": "rimraf css/*",
     "build:sass": "node-sass --output-style compact -o css sass",
     "build:autoprefixer": "autoprefixer-cli css/style.css",
-      
     "build-dev:sass": "node-sass --output-style expanded --source-map true -o css sass",
-      
     "watch": "npm-run-all build -p watch:*",
     "watch:sass": "node-sass --output-style expanded --source-map true -o css sass --watch",
-    "watch:sassprefixer" : "node-sass --output-style expanded --source-map true -o css sass onchange -d 100 sass/* -- autoprefixer-cli -o css/style.css",
+    "watch:sassprefixer": "node-sass --output-style expanded --source-map true -o css sass onchange -d 100 sass/* -- autoprefixer-cli -o css/style.css",
     "watch:prefixer": "onchange -d 100 sass/style.scss -- autoprefixer-cli css/style.css",
-    "watch:browsersync": "node_modules/.bin/browser-sync start --server --files css/*.css *.html"
+    "watch:browsersync": "browser-sync start --server --files css/*.css *.html"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com:wojtekboj/modul_7.git"
+    "url": "git+https://github.com/wojtekboj/modul_7.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Wojciech Bojarczuk",
   "license": "ISC",
   "bugs": {
-      "url": "https://github.com:wojtekboj/modul_7/issues"
+    "url": "https://github.com:wojtekboj/modul_7/issues"
   },
-    "homepage": "https://github.com:wojtekboj/modul_7#readme",
+  "homepage": "https://github.com:wojtekboj/modul_7#readme",
   "devDependencies": {
     "autoprefixer-cli": "^1.0.0",
     "browser-sync": "^2.24.4",
